--- a/sass/page/index.scss
+++ b/sass/page/index.scss
@@ -1,4 +1,6 @@
-@import 'variables/variables';
+@import 'variables/index';
+@import 'mixins/index';
+@import 'elements/index';
 
 * {
     box-sizing: border-box;
@@ -7,11 +9,20 @@
 }
 
 body {
-    background-color: black;
-    color: white;
+    background-color: $secondary;
+    color: $primary;
 }
 
-section {
+section, header, footer {
     max-width: 960px;
     margin: auto;
+}
+
+button.raptor {
+    border: 0;
+    background-color: $primary;
+    color: white;
+    display: inline-block;
+    padding: 1em 2em;
+    font-weight: bold;
 }
